z-index and submenu width fixed

--- a/src/scss/_content_new.scss
+++ b/src/scss/_content_new.scss
@@ -55,10 +55,12 @@
     left: 0%;
     top: 38px;
     width: 100%;
+    min-width: 130px;
     background-color: black;
     list-style: none;
     font-size: 13px;
     text-align: left;
+    z-index: 10;
 
     &__item {
         padding: 10px;
